# symclone

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py
docs/: Expression.rst  conf.py
docs/_build/doctrees/: Expression.doctree  FuzzyBoolean.doctree  MathOperations.doctree  Symbol.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  Expression.html  FuzzyBoolean.html  MathOperations.html  Symbol.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/symclone/: Expression.html  FuzzyBoolean.html  MathOperations.html  Symbol.html
docs/_build/html/_sources/: FuzzyBoolean.rst.txt  MathOperations.rst.txt  Symbol.rst.txt  index.rst.txt  modules.rst.txt
docs/_build/html/_static/: documentation_options.js
example_package_CHRISTOPH_HARTLEB.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
symclone/: Expression.py  FuzzyBoolean.py  MathOperations.py  Symbol.py  __init__.py
symclone_package.egg-info/: PKG-INFO  SOURCES.txt
tests/: TestExpression.py  TestFuzzyBoolean.py  TestMathOperations.py  TestSymbol.py
