[project]
name = "symclone_package"
version = "0.0.1"
authors = [
  { name="Christoph Hartleb", email="krystovhar@gmail.com" },
]
description = "SymClone - A Sympy Clone"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: informative License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311', 'py312']
